<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/visor"
        android:layout_width="@dimen/visor_layour_width"
        android:layout_height="@dimen/visor_layout_height"
        android:layout_marginTop="@dimen/visor_layout_margintop"
        android:background="@drawable/border"
        android:maxLines="@integer/max_line_txt_view"
        android:text="@string/btn_text_number_zero"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/btn_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_2"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_two"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_point"
        style="@style/btn_num_style"
        android:text="@string/btn_text_point"
        app:layout_constraintEnd_toStartOf="@id/btn_equal"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_5"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_five"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_7"
        style="@style/btn_num_style"
        android:layout_marginTop="@dimen/btn_seven_margintop"
        android:text="@string/btn_text_number_seven"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_plus" />

    <Button
        android:id="@+id/btn_4"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_four"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_8"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_eight"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_1"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_one"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_9"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintTop_toTopOf="@+id/btn_7" />

    <Button
        android:id="@+id/btn_equal"
        style="@style/btn_num_style"
        android:text="@string/btn_text_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_point"
        app:layout_constraintTop_toTopOf="@+id/btn_0" />

    <Button
        android:id="@+id/btn_6"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintTop_toTopOf="@+id/btn_4" />

    <Button
        android:id="@+id/btn_3"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintTop_toTopOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_0"
        style="@style/btn_num_style"
        android:text="@string/btn_text_number_zero"
        app:layout_constraintEnd_toStartOf="@id/btn_point"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1" />

    <Button
        android:id="@+id/btn_sub"
        style="@style/btn_op_style"
        android:text="@string/btn_text_sub"
        app:layout_constraintEnd_toStartOf="@id/btn_multiply"
        app:layout_constraintStart_toEndOf="@+id/btn_plus"
        app:layout_constraintTop_toTopOf="@+id/btn_plus" />

    <Button
        android:id="@+id/btn_plus"
        style="@style/btn_op_style"
        android:layout_marginLeft="@dimen/btn_plus_marginleft"
        android:layout_marginTop="@dimen/btn_plus_margintop"
        android:text="@string/btn_text_plus"
        app:layout_constraintEnd_toStartOf="@id/btn_sub"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visor" />

    <Button
        android:id="@+id/btn_divide"
        style="@style/btn_op_style"
        android:layout_marginEnd="@dimen/btn_divide_marginend"
        android:layout_marginRight="@dimen/btn_divide_marginright"
        android:text="@string/btn_text_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_multiply"
        app:layout_constraintTop_toTopOf="@+id/btn_plus" />

    <Button
        android:id="@+id/btn_multiply"
        style="@style/btn_op_style"
        android:text="@string/btn_text_multiply"
        app:layout_constraintEnd_toStartOf="@id/btn_divide"
        app:layout_constraintStart_toEndOf="@+id/btn_sub"
        app:layout_constraintTop_toTopOf="@+id/btn_plus" />

    <Button
        android:id="@+id/btn_clear"
        style="@style/btn_op_style"
        android:layout_width="@dimen/btn_clear_layout_width"
        android:layout_height="@dimen/btn_clear_layout_heigth"
        android:layout_marginTop="@dimen/btn_clear_margintop"
        android:text="@string/btn_text_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sub" />

</androidx.constraintlayout.widget.ConstraintLayout>